--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
 </head>
 <body>
     <main>
-        <h2>Nosso trabalho</h2>
+        <div>
+            <h2>Nosso trabalho</h2>
 
-        <h1>Fazemos projetos para mobile e web</h1>
+            <h1>Fazemos projetos para mobile e web</h1>
 
-        <p>
-            Se você tem uma grande ideia inovadora e que vai transformar vidas, coloque em prática agora com a gente.
-        </p>
+            <p>
+                Se você tem uma grande ideia inovadora e que vai transformar vidas, coloque em prática agora com a gente.
+            </p>
 
-        <a href="#">Saiba Mais</a>
+            <a href="#">Saiba Mais</a>
+        </div>
 
 
         <ul>
